[package]
name = "tache-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7" }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "chrono",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
thiserror = "1"
